--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -5,7 +5,7 @@ body {
   color: #6FA8DC;
   font: 16px;
   line-height: 1.5;
-  font-family:Microsoft Yahei;
+  font-family:Arial;
 }
 
 .container {
